--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@expo-google-fonts/open-sans": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/hooks": "^3.0.0",
     "@react-navigation/native": "^6.1.17",
     "expo": "~51.0.11",
     "expo-constants": "~16.0.2",
