--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/hooks": "^3.0.0",
     "@react-navigation/native": "^6.1.17",
+    "email-validator": "^2.0.4",
     "expo": "~51.0.11",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
