--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.2",
     "react-native-reanimated": "~3.10.1",
+    "react-native-root-toast": "^3.6.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.12"
+    "react-native-web": "~0.19.12",
+    "expo-secure-store": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
