--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,10 @@
     "paths": {
       "@components/*": ["./src/components/*"],
       "@hooks/*": ["./src/hooks/*"],
+      "@context/*": ["./src/context/*"],
       "@assets/*": ["./src/assets/*"],
-      "@styles/*": ["./src/styles/*"]
+      "@styles/*": ["./src/styles/*"],
+      "@constants/*": ["./src/constants/*"]
     },
     "rootDir": "src"
   },
