--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.2",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-root-toast": "^3.6.0",
     "react-native-safe-area-context": "4.10.1",
